--- a/module-2/web/index.html
+++ b/module-2/web/index.html
@@ -79,7 +79,7 @@
   </body>
   <script>
 
-    var mysfitsApiEndpoint = 'REPLACE_ME'; // example: 'http://mythi-publi-abcd12345-01234567890123.elb.us-east-1.amazonaws.com'
+    var mysfitsApiEndpoint = 'http://mysfits-nlb-a2945413ffadc571.elb.us-east-1.amazonaws.com'; // example: 'http://mythi-publi-abcd12345-01234567890123.elb.us-east-1.amazonaws.com'
 
     var app = angular.module('mysfitsApp', []);
 
